# drift-triage-co-pilot

./: .dockerignore  .env.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  README.md  brainstorm.txt  changes_log.txt  check.txt  docker-compose.yml  phases.txt  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: test.yml
artifacts/: baseline_stats.json  model_card.json
backend/agent/: Dockerfile  deps.py  main.py  settings.py
backend/agent/agents/: checkpointer.py  graph.py  llm.py  state.py
backend/agent/core/: errors.py  logging.py
backend/agent/db/: base.py  models.py  session.py
backend/agent/routers/: approvals.py  investigations.py  queue.py  webhook.py
backend/agent/schemas/: action.py  api.py  hil.py  investigation.py  queue_task.py  triage.py  webhook.py
backend/agent/services/: platform_client.py
backend/platform/: Dockerfile  api.py  main.py  settings.py
backend/platform/db/: base.py  model.py  models.py  session.py
backend/platform/routers/: drift.py  drift_trigger.py  predict.py  promotion.py  registry.py  replay.py  retrain.py
backend/trainer/: Dockerfile
backend/worker/: Dockerfile  main.py  settings.py
backend/worker/queue/: dlq.py
backend/worker/tasks/: replay_test.py  retrain.py  rollback.py
db/init/: 01_create_databases.sql
docs/: API_CONTRACT.md  ARCH.md  CODING_GUIDELINES.md  DATASET.md  DECISIONS.md  RUNBOOK.md  STRUCTURE.md
frontend/dashboard/: Dockerfile  app.py  requirements.txt
jawad/: changes_log.txt  changes_log_v1.txt  remaining_phases.txt
ml/evaluation/: drift_detector.py  psi_chi2.py  webhook_client.py
ml/preprocessing/: split_data.py
ml/training/: train.py
tests/: conftest.py
tests/test_agent/: test_action.py  test_triage.py
(+10 files in other folders)
