[project]
name = "drift-triage-co-pilot"
version = "0.1.0"
description = "MLOps drift detection and triage system with LangGraph supervisor"
requires-python = ">=3.11"
dependencies = [
    # Shared — FastAPI, DB, HTTP, observability
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "psycopg[binary,pool]>=3.1.0",
    "httpx>=0.27.0",
    "redis>=5.0.0",
    "structlog>=24.1.0",
    "tenacity>=8.2.0",
    "python-dotenv>=1.0.0",
    # Agent — LangGraph + LLM clients
    "langgraph>=0.1.0",
    "langgraph-checkpoint-postgres>=1.0.0",
    "langchain-openai>=0.1.0",
    "langchain-groq>=0.1.0",
    # Platform / Trainer / Worker — ML stack
    "mlflow>=2.12.0",
    "lightgbm>=4.3.0",
    "xgboost>=2.0.0",
    "scikit-learn>=1.4.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "scipy>=1.13.0",
    # Dashboard
    "streamlit>=1.33.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.1.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "mypy>=1.9.0",
    "pre-commit>=3.7.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["agent", "platform", "worker", "dashboard"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
no_implicit_optional = true
strict_equality = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=backend --cov-report=term-missing --cov-fail-under=80"